add: updated research page

--- a/research.html
+++ b/research.html
@@ -21,16 +21,38 @@
 <h1>Research</h1>
 
 <section>
-  <h2>Current Work</h2>
-  <p>
-    Describe your current projects and collaborations.
-  </p>
-</section>
+  <h2>Research Projects</h2>
 
+  <section>
+    <h3>Jiaban Yu Research Group — University of Florida (2025-Present)</h3>
+    <p>
+      In the Yu Lab, I work on physics-guided machine learning methods for electronic structure
+      modeling and reduced density matrix reconstruction.
+    </p>
+  </section>
+
+  <section>
+    <h3>Chinedu Ekuma Research Group — Lehigh University (2025)</h3>
+    <p>
+      In the summer of 2025, I was an REU student in the Ekuma lab. Here I conducted computational condensed matter research focused on electronic band structure analysis and high-throughput materials screening.
+    </p>
+  </section>
+
+</section>
 <section>
-  <h2>Publications & Posters</h2>
+  <h2>Publications & Presentations</h2>
   <ul>
-    <li>Paper / Poster Title — Venue (Year)</li>
+    <li>
+      Hart, J., et al., 
+      <em>High-throughput discovery of topological and magnetic phases in Heuslerenes Open Access </em>, 
+      APL Materials <strong>13</strong>, 111107 (2025).  
+      <a href="https://pubs.aip.org/aip/apm/article/13/11/111107/3371448" target="_blank" rel="noopener">AIP</a>
+    </li>
+    <li>
+      Hart, J., 
+      <em>Accelerated Phase Space Mapping of Heuslerene Monolayers Using Deep Learning</em>, 
+      Lehigh University Research Day 2025 — Student Research Poster Session (August 2025).
+    </li>
   </ul>
 </section>
 
