--- a/coursework.html
+++ b/coursework.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Coursework — Your Name</title>
+  <title>Coursework — Justin B. Hart</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
