update: added awards

--- a/cv.html
+++ b/cv.html
@@ -75,9 +75,11 @@
   <h2>Awards & Honors</h2>
 
   <ul>
-    <li>UF Presidential Scholarship</li>
-    <li>National Merit Scholar</li>
-    <li>Florida Academic Top Scholar</li>
+    <li>UF Presidential Scholarship (2024)</li>
+    <li>National Merit Scholar (2024)</li>
+    <li>Benacquisto Scholarship (2024)</li>
+    <li>UF Honors Research Stipend (2024)</li>
+    <li>Florida Academic Top Scholar (2025)</li>
     <li>3rd Place Overall Project — UF Swamphacks (2025)</li>
   </ul>
 </section>
